[package]
name = "fanbox-archive-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
imagesize = "0.12.0"
log = "0.4.21"
mime_guess = "2.0.4"
post-archiver = "0.1.12"
rayon = "1.10.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
zip = "2.1.1"
